--- a/projectORS/pom.xml
+++ b/projectORS/pom.xml
@@ -73,10 +73,10 @@
 			<artifactId>spring-session-jdbc</artifactId> </dependency> -->
 		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
 		<dependency>
-			<groupId>net.sf.jasperreports</groupId>
-			<artifactId>jasperreports</artifactId>
-			<version>6.11.0</version>
-		</dependency>
+    <groupId>net.sf.jasperreports</groupId>
+    <artifactId>jasperreports</artifactId>
+    <version>6.20.0</version>   <!-- ya latest stable -->
+</dependency>
 
 		<dependency>
 			<groupId>log4j</groupId>
